# TempoOS

./: .env.example  .gitignore  DESIGN_DOC_LIGHTWEIGHT.md  FRONTEND_API_DOC.md  TONGLU_V2_DEV_GUIDE.md  pyproject.toml  pytest.ini  requirements.txt
flows/examples/: echo_flow.yaml  procurement_flow.yaml
plan/: 00_migration_manifest.md  01_project_scaffold.md  02_tempo_core_migration.md  03_pg_storage.md  04_engine_enhance.md  05_resilience.md  06_node_framework.md  07_api_gateway.md  08T_full_unit_test_gate.md  08_observability.md  09_tonglu_scaffold.md  10_tonglu_pipeline.md  11_tonglu_service.md  12_model_gateway.md  13_supply_chain_nodes.md  14_cad_nodes.md  15_doc_nodes.md  16_a2ui_protocol.md  17_e2e_procurement.md  18_e2e_cad.md  _index.md
scripts/: init_db.sql  verify_env.py  verify_flow.py
tempo_os/: __init__.py  main.py
tempo_os/agents/: __init__.py  _router.md  data_analysis.md  document_writing.md  general.md  procurement.md  prompt_loader.py
tempo_os/api/: __init__.py  agent.py  deps.py  errors.py  gateway.py  middleware.py  observability.py  oss.py  registry_api.py  sse.py  state.py  workflow.py  ws.py
tempo_os/core/: __init__.py  config.py  context.py  logging.py  meta.py  metrics.py  tenant.py
tempo_os/kernel/: __init__.py  bus.py  clock.py  dispatcher.py  flow_loader.py  namespace.py  node_registry.py  redis_client.py  registry.py  (+2 more)
test-results/: e2e_report.md  run_scenarios.py  test1.2_no_tenant.txt  test1.3_simple_chat.txt  test1.4_search.txt  test1.4b_search_direct.txt
tests/: conftest.py
tonglu/: __init__.py  config.py  main.py
(+141 files in other folders)
