[project]
name = "tempo-os"
version = "0.1.0"
description = "TempoOS - Digital Employee Workflow Platform"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=tempo_os --cov-report=term-missing"

[tool.coverage.run]
source = ["tempo_os"]
omit = ["tests/*"]
